--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,12 +8,24 @@
                             <span class="post-date"><a href="#"><time class="entry-date"
                                                                       datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
                             <span class="post-author"><a href="#">{{ post.author }}</a></span>
-                            <span class="comments-link"><a href="#">4 评论</a></span>
-                            <span class="views-count"><a href="#">588 阅读</a></span>
+                            <span class="comments-link"><a href="#">{{ post.comment_set.count }} 评论</a></span>
+                            <span class="views-count"><a href="#">{{ post.views }} 阅读</a></span>
                         </div>
                     </header>
                     <div class="entry-content clearfix">
                          {{ post.body|safe }}
+                    </div>
+                    <div class="widget widget-tag-cloud">
+                        <h3 class="widget-title">标签云</h3>
+                        <ul>
+                            {% for tag in post.tags.all %}
+                            <li>
+                                <a href="{% url 'blog:tag' tag.pk %}">{{ tag.name }}</a>
+                            </li>
+                            {% empty %}
+                                No tag yet!
+                            {% endfor %}
+                        </ul>
                     </div>
                 </article>
                 <section class="comment-area" id="comment-area">
@@ -64,23 +76,7 @@
 
 {% block toc %}
     <div class="widget widget-content">
-                    <h3 class="widget-title">文章目录</h3>
-                    <ul>
-                        <li>
-                            <a href="#">教程特点</a>
-                        </li>
-                        <li>
-                            <a href="#">谁适合这个教程</a>
-                        </li>
-                        <li>
-                            <a href="#">在线预览</a>
-                        </li>
-                        <li>
-                            <a href="#">资源列表</a>
-                        </li>
-                        <li>
-                            <a href="#">获取帮助</a>
-                        </li>
-                    </ul>
-                </div>
+        <h3 class="widget-title">文章目录</h3>
+         {{ post.toc|safe }}
+    </div>
 {% endblock toc %}
